# tee-worker

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  build.Dockerfile  upstream_commit
.github/workflows/: build_and_test.yml
app-libs/sgx-runtime/: Cargo.toml
app-libs/sgx-runtime/src/: lib.rs
app-libs/stf/: Cargo.toml
app-libs/stf/src/: challenge_code.rs  getter.rs  hash.rs  helpers.rs  lib.rs  stf_sgx.rs  stf_sgx_litentry.rs  stf_sgx_primitives.rs  stf_sgx_tests.rs  test_genesis.rs  trusted_call.rs  trusted_call_litentry.rs
cli/: Cargo.toml  demo_https_test.sh  demo_shielding_unshielding.sh  demo_sidechain.sh  user_shielding_key.sh
cli/src/: command_utils.rs  main.rs  trusted_commands.rs  trusted_commands_litentry.rs
cli/src/base_cli/: mod.rs
cli/src/trusted_base_cli/: mod.rs
core-primitives/attestation-handler/src/: attestation_handler.rs
core-primitives/block-import-queue/: Cargo.toml
core-primitives/enclave-api/: Cargo.toml
core-primitives/enclave-api/src/: assertions_verify_daemon.rs  extrinsic_request_daemon.rs  https_client_daemon.rs  lib.rs  remote_attestation.rs  stf_task_handler.rs
core-primitives/extrinsics-factory/: Cargo.toml
core-primitives/node-api-extensions/: Cargo.toml
core-primitives/node-api/api-client-extensions/: Cargo.toml
core-primitives/node-api/api-client-types/: Cargo.toml
core-primitives/node-api/api-client-types/src/: client.rs  lib.rs
core-primitives/node-api/client/: Cargo.toml
core-primitives/node-api/client/src/: lib.rs  message_handler.rs
core-primitives/node-api/factory/: Cargo.toml
core-primitives/node-api/metadata/: Cargo.toml
core-primitives/ocall-api/: Cargo.toml
core-primitives/rpc/: Cargo.toml
core-primitives/settings/src/: lib.rs
core-primitives/sgx/crypto/: Cargo.toml
core-primitives/stf-executor/: Cargo.toml
core-primitives/stf-executor/src/: enclave_signer.rs  enclave_signer_tests.rs  executor.rs  traits.rs
core-primitives/stf-interface/: Cargo.toml
core-primitives/stf-interface/src/: lib.rs  mocks.rs
core-primitives/stf-state-handler/: Cargo.toml
core-primitives/storage/: Cargo.toml
core-primitives/substrate-sgx/sp-io/: Cargo.toml
core-primitives/test/: Cargo.toml
core-primitives/top-pool/: Cargo.toml
core-primitives/top-pool-author/: Cargo.toml
core-primitives/types/: Cargo.toml
core-primitives/types/src/: lib.rs
core/account-request-handler/: Cargo.toml
core/assertions-verify-daemon/: Cargo.toml
core/assertions-verify-daemon/src/: error.rs  lib.rs  verify_daemon_sender.rs
core/direct-rpc-server/: Cargo.toml
core/extrinsic-request-daemon/: Cargo.toml
core/extrinsic-request-daemon/src/: lib.rs  xt_daemon_sender.rs
core/https-client-daemon/: Cargo.toml
core/https-client-daemon/src/: daemon_sender.rs  https_client.rs  lib.rs
core/https-request-handler/: Cargo.toml
core/https-request-handler/src/: discord.rs  lib.rs  twitter.rs
core/identity-verify-handler/: Cargo.toml
core/offchain-worker-executor/: Cargo.toml
core/parentchain/block-import-dispatcher/: Cargo.toml
core/parentchain/block-importer/: Cargo.toml
core/parentchain/indirect-calls-executor/: Cargo.toml
core/parentchain/light-client/: Cargo.toml
core/parentchain/test/: Cargo.toml
core/rest-client/: Cargo.toml
core/rest-client/src/: http_client.rs  rest_client.rs
core/rpc-client/: Cargo.toml
core/rpc-server/: Cargo.toml
core/stf-task-handler/: Cargo.toml
core/tls-websocket-server/: Cargo.toml
core/tls-websocket-server/src/: certificate_generation.rs
docker/: demo-direct-call.yml  demo-indirect-invocation.yml  demo-sidechain.yml  demo-smart-contract.yml  demo-teeracle.yml  docker-compose.yml  fork-inducer.yml  https-test.yml  https_integration_test.yml  https_test.yml  litentry-parachain.build.yml  litentry-parachain.yml  sidechain-benchmark.yml  user-shielding-key.yml
docker/litentry/: litmus-dev-2106.json  parachain-2106.Dockerfile  relaychain.Dockerfile  rococo-local.json
enclave-runtime/: Cargo.toml  Enclave.edl
enclave-runtime/src/: assertions_daemon.rs  attestation.rs  error.rs  extrinsic_daemon.rs  global_components.rs  https_daemon.rs  initialization.rs  lib.rs  stf_task_handler.rs  stf_task_thread.rs
enclave-runtime/src/initialization/: initialization.rs
enclave-runtime/src/test/: evm_pallet_tests.rs  mod.rs  ra_tests.rs  tests_main.rs
litentry-primitives/: Cargo.toml
litentry-primitives/src/: identity.rs  lib.rs  validation_data.rs
litentry/core/assertion-build/: Cargo.toml
litentry/core/data-providers/: Cargo.toml
litentry/core/identity-verification/: Cargo.toml
litentry/core/mock-server/: Cargo.toml
litentry/core/mock-server/src/: discord_litentry.rs  discord_official.rs  lib.rs  twitter_litentry.rs  twitter_official.rs
litentry/core/stf-task/initialization/: Cargo.toml
litentry/core/stf-task/initialization/src/: lib.rs  stf_task_receiver.rs
litentry/data-providers/: Cargo.toml
litentry/primitives/: Cargo.toml
litentry/primitives/src/: assertion.rs  ethereum_signature.rs  identity.rs  lib.rs  ruleset.rs  validation_data.rs
local-setup/: launch-rococo-staging.py  launch.py  launch_with_rococo_staging.py  rococo-staging01.json  rococo-staging02.json
local-setup/py/: helpers.py  worker.py
scripts/: test_nonce.sh
scripts/litentry/: build_parachain_docker.sh  generate_parachain_artefacts.sh  generate_upstream_patch.sh  identity_test.sh  start_parachain.sh  stop_parachain.sh  user_shielding_key.sh
service/: Cargo.toml
service/src/: cli.yml  config.rs  main.rs  sync_state.rs
sidechain/block-composer/: Cargo.toml
sidechain/block-verification/: Cargo.toml
sidechain/peer-fetch/: Cargo.toml
sidechain/primitives/: Cargo.toml
sidechain/rpc-handler/: Cargo.toml
sidechain/sidechain-crate/: Cargo.toml
sidechain/state/: Cargo.toml
sidechain/storage/: Cargo.toml
sidechain/test/: Cargo.toml
sidechain/top-pool-executor/: Cargo.toml
sidechain/validateer-fetch/: Cargo.toml
ts-tests/: identity.test.ts  indirect_calls.ts  package.json  type-definitions.ts  utils.ts
(+95 files in other folders)
