[workspace]
resolver = "2"
members = [
    "app-libs/sgx-runtime",
    "app-libs/stf",
    "cli",
    "core/direct-rpc-server",
    "core/offchain-worker-executor",
    "core/parentchain/block-import-dispatcher",
    "core/parentchain/block-importer",
    "core/parentchain/indirect-calls-executor",
    "core/parentchain/light-client",
    "core/parentchain/parentchain-crate",
    "core/rest-client",
    "core/rpc-client",
    "core/rpc-server",
    "core/tls-websocket-server",
    "core-primitives/block-import-queue",
    "core-primitives/component-container",
    "core-primitives/enclave-api",
    "core-primitives/enclave-api/ffi",
    "core-primitives/enclave-metrics",
    "core-primitives/extrinsics-factory",
    "core-primitives/hashing",
    "core-primitives/networking-utils",
    "core-primitives/node-api",
    "core-primitives/node-api/api-client-extensions",
    "core-primitives/node-api/api-client-types",
    "core-primitives/node-api/factory",
    "core-primitives/node-api/metadata",
    "core-primitives/node-api/metadata-provider",
    "core-primitives/nonce-cache",
    "core-primitives/ocall-api",
    "core-primitives/primitives-cache",
    "core-primitives/rpc",
    "core-primitives/settings",
    "core-primitives/sgx/crypto",
    "core-primitives/sgx/io",
    "core-primitives/stf-executor",
    "core-primitives/stf-state-handler",
    "core-primitives/storage",
    "core-primitives/substrate-sgx/externalities",
    "core-primitives/substrate-sgx/sp-io",
    "core-primitives/teerex-storage",
    "core-primitives/test",
    "core-primitives/time-utils",
    "core-primitives/top-pool",
    "core-primitives/top-pool-author",
    "service",
    "sidechain/block-composer",
    "sidechain/consensus/aura",
    "sidechain/consensus/common",
    "sidechain/consensus/slots",
    "sidechain/peer-fetch",
    "sidechain/rpc-handler",
    "sidechain/sidechain-crate",
    "sidechain/state",
    "sidechain/top-pool-executor",
    "sidechain/validateer-fetch",
]

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_alloc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_libc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_trts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_types = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_ucrypto = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_tcrypto = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_crypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_rand = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_urts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}

# litentry overrides
[patch."https://github.com/integritee-network/sgx-runtime"]
sgx-runtime = { git = "https://github.com/litentry/sgx-runtime", branch = "master", optional = true }
sp-io = { git = "https://github.com/litentry/sgx-runtime", branch = "master", optional = true }
sgx-externalities = { git = "https://github.com/litentry/sgx-runtime", branch = "master", optional = true }
