[workspace]

members = [
    "app-libs/exchange-oracle",
    "app-libs/sgx-runtime",
    "app-libs/stf",
    "cli",
    "core/direct-rpc-server",
	"core/https-request-handler",
    "core/offchain-worker-executor",
    "core/parentchain/block-import-dispatcher",
    "core/parentchain/block-importer",
    "core/parentchain/indirect-calls-executor",
    "core/parentchain/light-client",
    "core/parentchain/parentchain-crate",
    "core/rest-client",
    "core/rpc-client",
    "core/rpc-server",
    "core/tls-websocket-server",
    "core-primitives/block-import-queue",
    "core-primitives/component-container",
    "core-primitives/enclave-api",
    "core-primitives/enclave-api/ffi",
    "core-primitives/enclave-metrics",
    "core-primitives/extrinsics-factory",
    "core-primitives/hashing",
    "core-primitives/networking-utils",
    "core-primitives/node-api",
    "core-primitives/node-api/api-client-extensions",
    "core-primitives/node-api/api-client-types",
    "core-primitives/node-api/factory",
    "core-primitives/node-api/metadata",
    "core-primitives/node-api/metadata-provider",
    "core-primitives/nonce-cache",
    "core-primitives/ocall-api",
    "core-primitives/primitives-cache",
    "core-primitives/rpc",
    "core-primitives/settings",
    "core-primitives/sgx/crypto",
    "core-primitives/sgx/io",
    "core-primitives/stf-executor",
    "core-primitives/stf-state-handler",
    "core-primitives/stf-state-observer",
    "core-primitives/storage",
    "core-primitives/substrate-sgx/environmental",
    "core-primitives/substrate-sgx/externalities",
    "core-primitives/substrate-sgx/sp-io",
    "core-primitives/teerex-storage",
    "core-primitives/test",
    "core-primitives/time-utils",
    "core-primitives/top-pool",
    "core-primitives/top-pool-author",
    "core-primitives/types",
    "core-primitives/utils",
    "service",
    "sidechain/block-composer",
    "sidechain/block-verification",
    "sidechain/consensus/aura",
    "sidechain/consensus/common",
    "sidechain/consensus/slots",
    "sidechain/peer-fetch",
    "sidechain/primitives",
    "sidechain/rpc-handler",
    "sidechain/sidechain-crate",
    "sidechain/state",
    "sidechain/validateer-fetch",
]

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_alloc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_libc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_trts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_types = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_ucrypto = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_tcrypto = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_crypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_rand = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_urts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}

# have to patch the substrate crates for polkadot-v0.9.28 due to too old rust toolchain
# see also https://github.com/integritee-network/worker/issues/1000
# I had to make sure the other crate dependencies point to the original repo though:
# https://github.com/Kailai-Wang/substrate/commit/0bee196fbcac2e8663220b277a3767767202c630
# otherwise I'll get "maybe two versions of ..." error
[patch."https://github.com/paritytech/substrate.git"]
sc-transaction-pool = { git = "https://github.com/Kailai-Wang/substrate", branch = "kai-patch-v0.9.28" }
sc-consensus-babe = { git = "https://github.com/Kailai-Wang/substrate", branch = "kai-patch-v0.9.28" }
[patch.crates-io]
parity-db = { git = 'https://github.com/Kailai-Wang/parity-db', branch = "kai-patch-v0.9.28" }

#[patch."https://github.com/integritee-network/sgx-runtime"]
#sgx-runtime = { path = "../sgx-runtime/runtime"}
#sp-io = { path = "../sgx-runtime/substrate-sgx/sp-io"}
#sgx-externalities = { path = "../sgx-runtime/substrate-sgx/externalities"}

#[patch."https://github.com/integritee-network/integritee-node"]
#my-node-runtime = { package = "integritee-node-runtime", path = "../integritee-node/runtime"}

#[patch."https://github.com/scs/substrate-api-client"]
#substrate-api-client = { path = "../../scs/substrate-api-client" }
#substrate-client-keystore = { path = "../../scs/substrate-api-client/client-keystore" }

#[patch."https://github.com/integritee-network/pallets.git"]
#pallet-claims = { path = "../pallets/claims" }
#pallet-teerex = { path = "../pallets/teerex" }
#pallet-teeracle = { path = "../pallets/teeracle" }
#teerex-primitives = {path = "../pallets/primitives/teerex"}
#pallet-parentchain = { path = "../pallets/parentchain" }
#itp-types = {  path = "../pallets/primitives/types"}
#itp-utils = {  path = "../pallets/primitives/utils"}

#[patch."https://github.com/integritee-network/http_req"]
#http_req = {path = '..//http_req' }
