[package]
name = "litentry-primitives"
version = "0.1.0"
authors = ["Litentry Dev"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

[features]
default = ["std"]
std = [
    "sp-std/std",
]
production = []
