[package]
name = "ita-stf"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# crates.io
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
derive_more = { version = "0.99.5" }
log = { version = "0.4", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }

# sgx deps
sgx_tstd = { branch = "master", features = ["untrusted_fs", "net", "backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# local crates
ita-sgx-runtime = { default-features = false, path = "../sgx-runtime" }
itp-hashing = { path = "../../core-primitives/hashing" }
itp-node-api = { path = "../../core-primitives/node-api", default-features = false }
itp-node-api-metadata = { path = "../../core-primitives/node-api/metadata", default-features = false }
itp-node-api-metadata-provider = { path = "../../core-primitives/node-api/metadata-provider", default-features = false }
itp-sgx-externalities = { default-features = false, path = "../../core-primitives/substrate-sgx/externalities" }
itp-stf-interface = { default-features = false, path = "../../core-primitives/stf-interface" }
itp-storage = { default-features = false, path = "../../core-primitives/storage" }
itp-types = { default-features = false, path = "../../core-primitives/types" }
itp-utils = { default-features = false, path = "../../core-primitives/utils" }
its-primitives = { default-features = false, path = "../../sidechain/primitives" }
its-state = { default-features = false, optional = true, path = "../../sidechain/state" }
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator"], path = "../../core-primitives/substrate-sgx/sp-io" }

# Substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sc-keystore = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-application-crypto = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# scs / integritee
substrate-api-client = { optional = true, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.28" }
substrate-client-keystore = { optional = true, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.28" }

# litentry
aes-gcm = { git = "https://github.com/RustCrypto/AEADs" }
lc-stf-task-sender = { path = "../../litentry/core/stf-task/sender", default-features = false }
litentry-primitives = { path = "../../litentry/primitives", default-features = false }
my-node-runtime = { package = "litmus-parachain-runtime", git = "https://github.com/litentry/litentry-parachain.git", branch = "tee-dev", optional = true }
pallet-parentchain = { git = "https://github.com/integritee-network/pallets", branch = "develop", default-features = false }
parentchain-primitives = { package = "primitives", git = "https://github.com/litentry/litentry-parachain.git", branch = "tee-dev", default-features = false, optional = true }
rand = { version = "0.7", optional = true }
rand-sgx = { package = "rand", git = "https://github.com/mesalock-linux/rand-sgx", tag = "sgx_1.1.3", features = ["sgx_tstd"], optional = true }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
evm = ["ita-sgx-runtime/evm"]
evm_std = [
    "evm",
    "ita-sgx-runtime/evm_std",
]
mockserver = []
sgx = [
    "sgx_tstd",
    "itp-sgx-externalities/sgx",
    "its-state/sgx",
    "itp-utils/sgx",
    "sp-io/sgx",
    "itp-node-api/sgx",
    "litentry-primitives/sgx",
    "lc-stf-task-sender/sgx",
    "rand-sgx",
]
std = [
    # crates.io
    "codec/std",
    "log/std",
    "rlp/std",
    # local
    "ita-sgx-runtime/std",
    "itp-sgx-externalities/std",
    "itp-stf-interface/std",
    "itp-storage/std",
    "itp-types/std",
    "itp-utils/std",
    "its-primitives/std",
    "its-state/std",
    # substrate
    "sp-core/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "frame-system/std",
    "frame-support/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
    "sc-keystore",
    # scs/integritee
    "my-node-runtime",
    "pallet-parentchain/std",
    "sp-io/std",
    "substrate-api-client/std",
    "substrate-client-keystore",
    "ita-sgx-runtime/std",
    "itp-node-api/std",
    "litentry-primitives/std",
    "parentchain-primitives/std",
    "lc-stf-task-sender/std",
    "rand",
]
test = []
