[package]
name = "itc-assertions-verify-daemon"
version = "0.1.0"
authors = ["Litentry dev"]
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
thiserror = { version = "1.0.26", optional = true }
lazy_static = {version = "1.1.0", features = ["spin_no_std"]}

# frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# sgx dependencies
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true, features = ["net", "thread"] }

# Local
itp-types = { default-features = false, path = "../../core-primitives/types" }
# itp-enclave-api = { path = "../../core-primitives/enclave-api" }
# itp-enclave-api-ffi = { path = "../../core-primitives/enclave-api/ffi" }
# itp-sgx-crypto = { path = "../../core-primitives/sgx/crypto", default-features = false, features = ["sgx"] }
# itp-extrinsics-factory = { path = "../../core-primitives/extrinsics-factory", default-features = false, features = ["sgx"] }

# litentry
litentry-primitives = { path = "../../litentry/primitives", default-features = false }

[features]
default = ["std"]
std = [
    "litentry-primitives/std",
    "itp-types/std",
    "thiserror",
]

sgx = [
    "litentry-primitives/sgx",
    "thiserror_sgx",
    "sgx_tstd",
]