[package]
name = "itc-https-client-daemon"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2018"
resolver = "2"

[dependencies]
# std dependencies
http_req = { version = "0.7", optional = true, default-features = false, features = ["rust-tls"] }
http = { version = "0.2", optional = true }
thiserror = { version = "1.0.26", optional = true }
url = { version = "2.0.0", optional = true }

# sgx dependencies
http_req-sgx = { package = "http_req", git = "https://github.com/mesalock-linux/http_req-sgx", tag = "sgx_1.1.3", optional = true }
http-sgx = { package = "http", git = "https://github.com/mesalock-linux/http-sgx", tag = "sgx_1.1.3", optional = true }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true, features = ["net", "thread"] }
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }
url_sgx = { package = "url", git = "https://github.com/mesalock-linux/rust-url-sgx", tag = "sgx_1.1.3", optional = true }

# no_std dependencies
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
lazy_static = {version = "1.1.0", features = ["spin_no_std"]}

# internal dependencies
itc-rest-client = { path = "../rest-client", default-features = false }
itp-types = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "sdk-v0.9.0-polkadot-v0.9.26" }

itp-ocall-api = {path = "../../core-primitives/ocall-api", default-features = false }
itp-extrinsics-factory = {path = "../../core-primitives/extrinsics-factory", default-features = false}
itp-utils = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "sdk-v0.9.0-polkadot-v0.9.26" }

[features]
default = ["std"]
std = [
    "http",
    "http_req",
    "itc-rest-client/std",
    "log/std",
    "serde/std",
    "serde_json/std",
    "thiserror",
    "url",
    "itp-types/std",
    "itp-utils/std",
]
sgx = [
    "http-sgx",
    "http_req-sgx",
    "itc-rest-client/sgx",
    "sgx_tstd",
    "thiserror_sgx",
    "url_sgx",
]
