[package]
name = "itp-api-client-types"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
log = { version = "0.4.14", optional = true }
url = { version = "2.0.0", optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
ws = { version = "0.9.2", optional = true, features = ["ssl"] }

# scs
substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.29" }

# substrate
sp-core = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }

itp-node-api-client = { path = "../client", optional = true }

[features]
default = ["std"]
std = [
    "substrate-api-client/std",
    "substrate-api-client/ws-client",
    "sp-core",
    "log",
    "url",
    "serde/std",
    "serde_json",
    "hex/std",
    "ws",
    "itp-node-api-client/std"
]
