[package]
name = "itp-node-api-client"
version = "0.1.0"
authors = ["Litentry Dev"]
edition = "2021"

[dependencies]
thiserror = { version = "1.0" }
log = { version = "0.4.14", optional = true }
url = { version = "2.0.0", optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
ws = { version = "0.9.2", features = ["ssl"] }
tungstenite = { version = "0.17.3", features = ["native-tls"] }

# substrate
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", optional = true }

# scs
substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.29" }


[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", features = ['std'] }
env_logger = "*"
log = "0.4"
url = "2.0.0"
tungstenite = { version = "0.17.3", features = ["native-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.29" }

[features]
default = ["std"]
std = [
    "substrate-api-client/std",
    "sp-core",
    "log",
    "url",
    "serde/std",
    "serde_json",
    "hex/std",
]
