[package]
name = "lc-mock-server"
version = "0.1.0"
edition = "2021"

[dependencies]
httpmock = "0.6"
isahc = "1.7"
lazy_static = "1.4"
lc-data-providers = { path = "../data-providers" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.5", features = ["sync", "macros", "rt-multi-thread", "signal"] }

# [dev-dependencies]

[features]
mockserver = []
