[package]
name = "lc-mock-server"
version = "0.1.0"
edition = "2021"

[dependencies]
httpmock = "0.6"
isahc = "1.7"
lazy_static = "1.4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.5", features = ["sync", "macros", "rt-multi-thread", "signal"] }
hex = "0.4.3"

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
litentry-primitives = { path = "../../primitives", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }

lc-data-providers = { path = "../data-providers" }

[features]
mockserver = []
