[package]
name = "lc-stf-task-initialization"
version = "0.1.0"
authors = ["Litentry dev"]
edition = "2021"

[dependencies]
# std dependencies
http_req = { optional = true, features = ["rust-tls"], branch = "master", git = "https://github.com/integritee-network/http_req" }
http = { version = "0.2", optional = true }
thiserror = { version = "1.0.26", optional = true }
url = { version = "2.0.0", optional = true }

# sgx dependencies
http_req-sgx = { optional = true, default-features = false, features = ["rust-tls", "sgx"], package = "http_req", git = "https://github.com/integritee-network/http_req" }
http-sgx = { package = "http", git = "https://github.com/integritee-network/http-sgx.git", branch = "sgx-experimental", optional = true }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true, features = ["net", "thread"] }
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }
url_sgx = { package = "url", git = "https://github.com/mesalock-linux/rust-url-sgx", tag = "sgx_1.1.3", optional = true }

# no_std dependencies
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }

# internal dependencies
itc-rest-client = { path = "../../../../core/rest-client", default-features = false }
itp-types = { path = "../../../../core-primitives/types", default-features = false }
itp-utils = { path = "../../../../core-primitives/utils", default-features = false }
itp-ocall-api = { path = "../../../../core-primitives/ocall-api", default-features = false }
itp-sgx-crypto = { path = "../../../../core-primitives/sgx/crypto", default-features = false }
itp-extrinsics-factory = { path = "../../../../core-primitives/extrinsics-factory", default-features = false }

# litentry
litentry-primitives = { path = "../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "http",
    "http_req",
    "itc-rest-client/std",
    "log/std",
    "serde/std",
    "serde_json/std",
    "thiserror",
    "url",
    "itp-types/std",
    "itp-utils/std",
]
sgx = [
    "http-sgx",
    "http_req-sgx",
    "itc-rest-client/sgx",
    "sgx_tstd",
    "thiserror_sgx",
    "url_sgx",
]
